clusters/apps/arr/prowlarr/prowlarr-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: arr-stack
  labels:
    io.kompose.service: prowlarr
  name: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:

      labels:
        io.kompose.service: prowlarr
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/Chicago
          image: lscr.io/linuxserver/prowlarr:latest
          name: prowlarr
          ports:
            - containerPort: 9696
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: arr-claim1
            - mountPath: /data
              name: arr-claim1
      restartPolicy: Always
      volumes:
        - name: arr-claim1
          persistentVolumeClaim:
            claimName: arr-claim1
