clusters/apps/arr/prowlarr/prowlarr-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: arr-stack
  name: prowlarr-route
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure 
  routes:
    - kind: Rule
      match: Host(`prowlarr.local.wololoaeyoyo.com`)
      services:
        - name: prowlarr 
          port: 9696
  tls:
    secretName: local-wololoaeyoyo-com-tls
